# tv-shell

./: .dockerignore  .gitignore  .qmllint.ini  CLAUDE.md  CONTRIBUTING.md  Cargo.toml  README.md  shell.qml  widgets-index.json
.claude/: settings.json
.devcontainer/: devcontainer.json
.github/: dependabot.yml
.github/workflows/: ci.yml  claude-pr-review.yml  host.yml  lint.yml  qml-test.yml  release-host.yml  release-input.yml  release-widget.yml  rust.yml  widgets.yml
components/: AVControlSettings.qml  AVController.qml  AccessibilitySettings.qml  AppCard.qml  AppDiscoveryManager.qml  AppLifecycleManager.qml  AppearanceSettings.qml  AudioSettings.qml  BaseCard.qml  BluetoothSettings.qml  ControllerSettings.qml  DimmedBackdrop.qml  DisplaySettings.qml  Drawer.qml  ErrorLog.qml  ErrorLogViewer.qml  FocusFrame.qml  HomeScreen.qml  HyprctlClients.qml  IconTheme.qml  InputManager.qml  KeyBindingsSettings.qml  MarqueeText.qml  MoonlightProvider.qml  MoonlightSettings.qml  NavigableRow.qml  NavigationDrawer.qml  NetworkManager.qml  NetworkOverlay.qml  NetworkSettings.qml  NotificationCenter.qml  NotificationManager.qml  NotificationStack.qml  NotificationToast.qml  PopoverMenu.qml  PowerOverlay.qml  PowerSettings.qml  QuickActions.qml  RecentsTracker.qml  SessionDialog.qml  (+18 more)
config/: config.toml.example  daemon.env.example  game-shell-input.service  game-shell-quickshell.service  game-shell.desktop  hyprland.conf  hyprland.conf.example  palette.md  targets.json.example  targets.yaml.example  tv-shell-input.service  tv-shell-panel.service  tv-shell-quickshell.service  tv-shell.desktop
daemon/: Cargo.toml  README.md
daemon/assets/: gamecontrollerdb.txt
daemon/src/: apps.rs  av_net.rs  bluetooth.rs  bridge_core.rs  cec.rs  config.rs  controllerdb.rs  daemon_config.rs  device.rs  health.rs  http.rs  hyprland.rs  input.rs  ipc.rs  lib.rs  main.rs  mcp.rs  metrics.rs  moonlight.rs  netinfo.rs  network.rs  notifications.rs  plex.rs  power.rs  protocol.rs  recents.rs  service_health.rs  session.rs  session_env.rs  sidecar.rs  state.rs  steam.rs  system.rs  testutil.rs  watch.rs  webapps.rs  wol.rs
daemon/src/input/: capture.rs  enumerate.rs  fleet.rs  grab.rs  mod.rs  pad.rs
dev/: Dockerfile  README.md  docker-compose.yml  entrypoint.sh  hyprland-dev.conf  restart.sh  targets.json
dev/stubs/: bluetoothctl  cec-client  moonlight  nmcli  systemctl  wpctl
docs/: CONTROL_SURFACE.md  HOST_SETUP.md  INPUT_AND_STATE.md  INPUT_REGRESSION_CHECKLIST.md  INSTALL.md  IPC_PROTOCOL.md  KIOSK_WINDOW_MODEL.md  OBSERVABILITY.md  PANEL.md  PR_INPUT_UNIFICATION.md  SYSTEMD_SETUP.md  WEB_APPS.md  WIDGET_FRAMEWORK.md  qa-screenshot-views.md
examples/: README.md  grafana-dashboard.json  prometheus-scrape.yaml
host/: Cargo.toml
host/src/: launch.rs  main.rs  steam.rs
host/tests/fixtures/: appmanifest_730.acf  registry.vdf
input/: gamepad-input.py
packaging/: .gitkeep
panel/: Cargo.toml
panel/assets/: README.md  style.css
panel/src/: assets.rs  bridge.rs  config.rs  exec.rs  humanize.rs  ipc.rs  main.rs  state.rs  tests.rs  text.rs  updates.rs
panel/src/pages/: cec.rs  controllers.rs  dashboard.rs  dev.rs  logs.rs  media.rs  mod.rs  nav.rs  processes.rs  settings.rs  tools.rs  widgets.rs
panel/templates/: base.html  cec.html  cec_health.html  cec_result.html  controllers.html  controllers_bindings.html  controllers_fleet.html  dashboard.html  dashboard_tiles.html  dashboard_updates_tile.html  dev.html  dev_result.html  dev_screenshot.html  logs.html  logs_view.html  media.html  media_result.html  processes.html  processes_result.html  processes_update_job.html  processes_updates_check.html  settings.html  settings_result.html  stub.html  tools.html  tools_result.html  widgets.html  widgets_grid.html  widgets_result.html
protocol/: Cargo.toml
protocol/src/: brand.rs  lib.rs
rust/: Cargo.toml  README.md
rust/src/: apps.rs  config.rs  device.rs  health.rs  hyprland.rs  input.rs  ipc.rs  lib.rs  main.rs  network.rs  power.rs  protocol.rs  recents.rs  state.rs
scripts/: build-daemon.sh  build-panel.sh  check-widgets-index.py  game-shell-session.sh  install-deps.sh  install.sh  super-intent.sh  tv-shell-session.sh
shell/: shell.qml
shell/components/: AVControlSettings.qml  AVController.qml  AccessibilitySettings.qml  AppCard.qml  AppDiscoveryManager.qml  AppLifecycleManager.qml  AppearanceSettings.qml  AudioController.qml  AudioSettings.qml  AutoSuspendController.qml  BaseCard.qml  BluetoothSettings.qml  Brand.qml  ConfirmDialog.qml  ContinueCard.qml  ControllerSettings.qml  DimOverlay.qml  DisplaySettings.qml  Drawer.qml  ErrorLogViewer.qml  FilterChips.qml  FocusFrame.qml  HomeScreen.qml  HyprctlClients.qml  IdleInhibitController.qml  InputManager.qml  InputMode.qml  KeyBindingsSettings.qml  LaunchOverlay.qml  LibraryScreen.qml  MediaWidget.qml  MoonlightConf.qml  MoonlightProvider.qml  MoonlightSettings.qml  MoonlightWidget.qml  NavigableGrid.qml  NavigableRow.qml  NavigationDrawer.qml  NetworkManager.qml  NetworkOverlay.qml  (+58 more)
shell/components/lib/: ActionCard.qml  AnchoredPopover.qml  AppIcon.qml  ClockText.qml  CountBadge.qml  DimmedBackdrop.qml  FocusAccentBar.qml  FocusButton.qml  FocusRegion.qml  HintBar.qml  LabeledTextInput.qml  ModalOverlay.qml  MprisPlayerBase.qml  PointerTrackingArea.qml  PreferenceRow.qml  (+17 more)
shell/settings/: AVControlSettings.qml  AccessibilitySettings.qml  AudioSettings.qml  BluetoothSettings.qml  ControllerSettings.qml  DisplaySettings.qml  KeyBindingsSettings.qml  NetworkSettings.qml  PowerSettings.qml  SettingsApp.qml  SystemSettings.qml  WallpaperSettings.qml  WebAppsSettings.qml  WidgetsSettings.qml  qmldir
shell/widgets/: SteamServerSettings.qml  WidgetConfig.qml  WidgetList.qml  WidgetsApp.qml  qmldir
tests/qml/: README.md  run.sh  tst_appquirks.qml  tst_drawer.qml  tst_idleinhibitcontroller.qml  tst_launchtrace.qml  tst_navigablegrid.qml  tst_prewarm.qml  tst_quickactions.qml  tst_resumefocus.qml  tst_resumemodel.qml  tst_settingspayload.qml  tst_widgetcontract.qml  tst_widgethost.qml  tst_widgetmigrate.qml  tst_widgetreact.qml
(+61 files in other folders)
