[package]
name = "game-shell-input"
version = "0.1.0"
edition = "2021"
rust-version = "1.75"
license = "GPL-3.0"
description = "game-shell input daemon: grabs a gamepad via EVIOCGRAB and emits keyboard/mouse via uinput, with a Unix-socket IPC protocol"

[[bin]]
name = "game-shell-input"
path = "src/main.rs"

[dependencies]
tokio = { version = "1.40", features = ["full"] }
tokio-util = { version = "0.7", features = ["codec"] }
futures = "0.3"
serde = { version = "1", features = ["derive"] }
serde_json = { version = "1", features = ["preserve_order"] }
# Pure-Rust .desktop parser (cross-platform): drives app discovery (apps.rs).
# Deliberately NOT Linux-gated so the parse/filter logic unit-tests on macOS.
# default-features = false drops the optional `gettext` feature (and its C
# gettext-rs dependency) — we scan with empty locales, so no translation is
# needed and CI/macOS stay free of a system gettext requirement.
freedesktop-desktop-entry = { version = "0.8", default-features = false }
anyhow = "1"
thiserror = "1"
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter"] }
libc = "0.2"
# Sunshine session detection (health.rs). Cross-platform HTTP client over its
# self-signed HTTPS endpoint. default-features = false + rustls-tls keeps us off
# the system OpenSSL; we also enable danger/accept-invalid-certs at call time for
# Sunshine's self-signed cert. The XML/JSON response *parser* is a pure function
# (unit-tested on macOS); only the fetch needs the runtime/TLS.
reqwest = { version = "0.12", default-features = false, features = ["rustls-tls"] }

# evdev/uinput are Linux kernel interfaces. Keep them off non-Linux hosts so
# the pure-logic modules (protocol, config, device GUID math) still compile and
# `cargo test` runs on a macOS/dev box. The full binary only links on Linux.
#
# zbus (NetworkManager/logind/UPower) and bluer (BlueZ) are the Phase 3 D-Bus
# backbone. Both are pure-Rust (no system libdbus) but speak D-Bus, which only
# exists on Linux, so they live here alongside evdev. The portable modules
# (protocol parsing/Display, response builders) stay testable on macOS; the
# bluetooth/network/power modules are `#[cfg(target_os = "linux")]`.
[target.'cfg(target_os = "linux")'.dependencies]
evdev = { version = "0.13", features = ["tokio"] }
# zbus 5.x is the current line (5.16). The `tokio` feature matches the daemon
# runtime and avoids pulling in async-io. default-features = false drops the
# async-io reactor; we only use the tokio one.
zbus = { version = "5.16", default-features = false, features = ["tokio"] }
# bluer is the official BlueZ binding. `bluetoothd` gates the Session/Adapter/
# Device API we need; default-features pull in extra protocol modules we don't.
bluer = { version = "0.17.4", default-features = false, features = ["bluetoothd"] }
# Hyprland IPC (Linux compositor only) is spoken directly over its Unix sockets
# in `hyprland.rs` — no crate. The `hyprland` 0.3.x crate hardcoded the legacy
# `/tmp/hypr/<sig>` socket dir and can't reach Hyprland >= 0.40 (sockets moved to
# `$XDG_RUNTIME_DIR/hypr/<sig>`); the wire protocol is trivial to own here.
