[package]
name = "game-shell-input"
version = "0.1.0"
edition = "2021"
rust-version = "1.75"
license = "GPL-3.0"
description = "game-shell input daemon: grabs a gamepad via EVIOCGRAB and emits keyboard/mouse via uinput, with a Unix-socket IPC protocol"

[[bin]]
name = "game-shell-input"
path = "src/main.rs"

[features]
# HDMI-CEC via cec-rs/libcec (#94). OFF by default so a plain `cargo build`/
# `cargo test` — including the Linux CI default leg and macOS dev boxes — needs
# NO system C libraries (preserving the pure-Rust invariant shared by
# evdev/zbus/bluer). Enable on the deploy host:
#   cargo build --release --features cec
#
# `libcec-sys/static` (#179) forces libcec-sys to STATIC-link a prebuilt libcec
# (v7.1.1) + p8-platform into the binary instead of dynamically linking the
# system `libcec.so`. The daemon is then self-contained: no `libcec`/`libcec-dev`
# system package at build or runtime, so a host can manage/remove system libcec
# (e.g. the Plasma Bigscreen `pulse8-cec` path in homelab-ansible#79) without
# breaking the daemon. The `static` branch wins over pkg-config even when system
# libcec-dev is present, so this is deterministic. Only `libudev`/`libstdc++`
# remain as (ubiquitous) dynamic deps — not the contested `libcec` package.
# Build-host requirement when enabled: libudev-dev + pkg-config (for the udev
# link hint) and network access to fetch the prebuilt static archive from
# ssalonen/libcec-static-builds. NO libcec-dev / libclang / cmake needed for the
# static path (no bindgen: libcec-sys ships pre-generated bindings). The prebuilt
# static libcec.a references glibc ≥2.38 C23 symbols (`__isoc23_sscanf` etc.), so
# the build/runtime host needs glibc ≥2.38 (CachyOS / glibc 2.43 satisfies this;
# CI's cec leg runs on Debian Trixie for the same reason — not bookworm/2.36).
cec = ["dep:cec-rs", "libcec-sys/static"]

[dependencies]
tokio = { version = "1.40", features = ["full"] }
tokio-util = { version = "0.7", features = ["codec"] }
futures = "0.3"
serde = { version = "1", features = ["derive"] }
serde_json = { version = "1", features = ["preserve_order"] }
# Pure-Rust .desktop parser (cross-platform): drives app discovery (apps.rs).
# Deliberately NOT Linux-gated so the parse/filter logic unit-tests on macOS.
# default-features = false drops the optional `gettext` feature (and its C
# gettext-rs dependency) — we scan with empty locales, so no translation is
# needed and CI/macOS stay free of a system gettext requirement.
freedesktop-desktop-entry = { version = "0.8", default-features = false }
anyhow = "1"
thiserror = "1"
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter"] }
libc = "0.2"
# Sunshine session detection (health.rs). Cross-platform HTTP client over its
# self-signed HTTPS endpoint. default-features = false + rustls-tls keeps us off
# the system OpenSSL; we also enable danger/accept-invalid-certs at call time for
# Sunshine's self-signed cert. The XML/JSON response *parser* is a pure function
# (unit-tested on macOS); only the fetch needs the runtime/TLS.
reqwest = { version = "0.12", default-features = false, features = ["rustls-tls"] }
# Constant-time comparison for HTTP bearer-token auth (prevents timing oracles, #151).
subtle = "2"

# evdev/uinput are Linux kernel interfaces. Keep them off non-Linux hosts so
# the pure-logic modules (protocol, config, device GUID math) still compile and
# `cargo test` runs on a macOS/dev box. The full binary only links on Linux.
#
# zbus (NetworkManager/logind/UPower) and bluer (BlueZ) are the Phase 3 D-Bus
# backbone. Both are pure-Rust (no system libdbus) but speak D-Bus, which only
# exists on Linux, so they live here alongside evdev. The portable modules
# (protocol parsing/Display, response builders) stay testable on macOS; the
# bluetooth/network/power modules are `#[cfg(target_os = "linux")]`.
[target.'cfg(target_os = "linux")'.dependencies]
evdev = { version = "0.13", features = ["tokio"] }
# zbus 5.x is the current line (5.16). The `tokio` feature matches the daemon
# runtime and avoids pulling in async-io. default-features = false drops the
# async-io reactor; we only use the tokio one.
zbus = { version = "5.16", default-features = false, features = ["tokio"] }
# bluer is the official BlueZ binding. `bluetoothd` gates the Session/Adapter/
# Device API we need; default-features pull in extra protocol modules we don't.
bluer = { version = "0.17.4", default-features = false, features = ["bluetoothd"] }
# Hyprland IPC (Linux compositor only) is spoken directly over its Unix sockets
# in `hyprland.rs` — no crate. The `hyprland` 0.3.x crate hardcoded the legacy
# `/tmp/hypr/<sig>` socket dir and can't reach Hyprland >= 0.40 (sockets moved to
# `$XDG_RUNTIME_DIR/hypr/<sig>`); the wire protocol is trivial to own here.
# notify-debouncer-full wraps inotify (Linux kernel interface) with a built-in
# debounce window so we don't hand-roll timers. Pulls `notify` transitively.
# Linux-only: inotify is a Linux syscall; watching is not meaningful on macOS
# (FSEvents is a different API), and the watch module is cfg-gated to match.
notify-debouncer-full = "0.3"

# HDMI-CEC (#94): cec-rs wraps the system libcec (GPL-2.0) C library — GPL-2.0
# is compatible under our GPL-3.0 (#88). 12.0.1 / libcec-sys 9.0.3 support
# libcec 7 (the daemon static-links bundled libcec 7, so no system libcec is
# needed on the deploy host (Arch/CachyOS); the 8.x/5.x line only
# supported libcec ≤6 and made the daemon fail to link there — the #94 revert).
# OPTIONAL + feature-gated (`cec`): unlike evdev/zbus/bluer (pure Rust, no C),
# libcec-sys links a C library and needs libcec-dev + libclang-dev at build
# time. `optional = true` keeps it out of the DEFAULT Linux build entirely (a
# plain `cfg(target_os="linux")` dep would still be pulled on every Linux
# build); only `--features cec` activates it via `dep:cec-rs`.
cec-rs = { version = "12.0.1", optional = true }
# Declared directly (optional) ONLY so the `cec` feature can forward
# `libcec-sys/static` (#179) — static-link a bundled libcec instead of the
# system `libcec.so`. Version matches cec-rs 12.0.1's transitive pin (`9.0.2`)
# so Cargo unifies them to one copy; keep it in lockstep if cec-rs bumps it.
# Stays optional so the default (no-cec) Linux build never compiles it.
libcec-sys = { version = "9.0.2", optional = true }
