[package]
name = "tv-shell-panel"
version = "0.1.0"
edition.workspace = true
# Not inherited from the workspace (1.75): axum/reqwest/askama transitives pull
# edition2024 crates that require Cargo >=1.85, exactly like the host crate.
rust-version = "1.85"
license.workspace = true
description = "LAN-only, server-rendered web control panel for the tv-shell HTPC daemon"

[[bin]]
name = "tv-shell-panel"
path = "src/main.rs"

[dependencies]
tokio = { workspace = true }
axum = { workspace = true }
serde = { workspace = true }
serde_json = { workspace = true }
anyhow = { workspace = true }
tracing = { workspace = true }
tracing-subscriber = { workspace = true }
reqwest = { workspace = true }
tv-shell-protocol = { workspace = true }
askama = { workspace = true }
# Typed config parsing (~/.config/tv-shell/config.toml), matching how the
# daemon declares it directly rather than via a workspace dep.
toml = "1.1"
# Format/comment-preserving config.toml edits — the panel's only config write
# is the CEC page's single-key `[cec].osd_name` update; everything else in the
# operator's file (comments, ordering, unknown sections) must survive intact.
toml_edit = "0.25"

# uid lookup for the $XDG_RUNTIME_DIR-unset socket-path fallback (matches how
# the host crate uses libc on Linux for its own OS-level needs).
[target.'cfg(unix)'.dependencies]
libc = "0.2"
